# PythonPilot

./: README.md  iq3_swagger.yaml  pyproject.toml  requirements.txt
pythonpilot/api/: __init__.py  api.py  models.py
pythonpilot/tests/: conftest.py  test_api.py
