[tool.poetry]
name = "pythonpilot"
version = "0.1.0"
description = "A Python API for talking to the HTTP server in Phase One Digital Backs"
authors = ["Maximilian Golub <m@maxg.io>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-dependency = "^0.5.1"
Kivy = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
